# DSA

./: a.out  apsp.cpp  ch_pattern.cpp  prime.cpp  sjf.c
SQL/: basic.sql
cpp/: 2darray.cpp  CMakeLists.txt  Dconversion.cpp  SinglyLList.cpp  a.out  apsp.cpp  code.cpp  letter_pattern.cpp  longestSubString.cpp  package.xml  reverseInteger.cpp  smallestInArray.cpp  sumOfDigits.cpp  typecasting.cpp  zigzagConversatation.cpp
cpp/BinaryTrees/: a.out  code.cpp  levelOrder.cpp  operation.cpp  traversal.cpp
cpp/NumberSystem/: a.out  binaryToDecimal.cpp  binaryToOctal.cpp  decimalToBinary.cpp  decimalToOctal.cpp  numbersToWords.cpp  octalToBinary.cpp  octalToDecimal.cpp
cpp/STL/containers/: a.out
cpp/algo/: a.out  apsp.cpp  binarySearch.cpp  bubble.cpp  fibonacci.cpp  gcd.cpp  insertionSort.cpp  merge.cpp  mergeSort.cpp  quickSort.cpp  selectionSort.cpp
cpp/array/: a.out  average.cpp  duplicate.cpp  exactRequirment.cpp  findElement.cpp  frequency.cpp  frquency.cpp  maxProdSubArray.cpp  median.cpp  repeatingElement.cpp  replaceArrayByRank.cpp  reverseHalf.cpp  rotateArray.cpp  rotateArrayByK.cpp  vector.cpp
cpp/list/: SinglyLList.cpp  a.out  basic.cpp  main
cpp/patterns/: 90_triangle.cpp  inverted_triangle.cpp
cpp/pointers/: a.out  basic.cpp  deRef.cpp
cpp/problemsOnNumbers/: amstrong.cpp  perfectNumber.cpp  primeNo.cpp  rangePrime.cpp  sumOfAp.cpp
cpp/queue/: basic.cpp
cpp/src/: drone.cpp
cpp/stack/: a.out  basic.cpp
cpp/string/: a.out  palindrome.cpp  rangePalindrome.cpp  reverse.cpp  reverseWords.cpp
java/: basic.java  bitManupulation.java  encap.java  (+7 more)
(+88 files in other folders)
